...
                                            <view autoresizesSubviews="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lw4-Ld-xEd">
                                                <rect key="frame" x="48.5" y="16" width="223" height="223"/>
                                                <subviews>
                                                    <imageView autoresizesSubviews="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile-default" translatesAutoresizingMaskIntoConstraints="NO" id="env-nz-gjm">
                                                        <rect key="frame" x="4" y="4" width="215" height="215"/>
                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        <accessibility key="accessibilityConfiguration" hint="profileImage" identifier="profileImage" label="profileImage">
                                                            <accessibilityTraits key="traits" image="YES"/>
                                                            <bool key="isElement" value="YES"/>
                                                        </accessibility>
                                                    </imageView>
                                                </subviews>
                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <accessibility key="accessibilityConfiguration" hint="background" identifier="background" label="background">
                                                    <accessibilityTraits key="traits" image="YES"/>
                                                    <bool key="isElement" value="NO"/>
                                                </accessibility>
                                                <constraints>
                                                    <constraint firstItem="env-nz-gjm" firstAttribute="top" secondItem="Lw4-Ld-xEd" secondAttribute="top" constant="4" id="KwH-iC-on0"/>
                                                    <constraint firstItem="env-nz-gjm" firstAttribute="leading" secondItem="Lw4-Ld-xEd" secondAttribute="leading" constant="4" id="PYM-b2-2XM"/>
...
                                                    <constraint firstAttribute="width" secondItem="Lw4-Ld-xEd" secondAttribute="height" multiplier="1:1" id="neV-Vd-7kQ"/>
                                                    <constraint firstAttribute="trailing" secondItem="env-nz-gjm" secondAttribute="trailing" constant="4" id="zXV-hI-Kv9"/>
                                                </constraints>
                                            </view>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mFs-KK-S7A">
                                                <rect key="frame" x="52.5" y="247" width="215" height="0.0"/>
                                                <accessibility key="accessibilityConfiguration" hint="name" identifier="name" label="name"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                        <constraints>
...
