...
                <rect key="frame" x="0.0" y="0.0" width="317" height="243"/>
                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                <subviews>
                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fah-nZ-jln">
                        <rect key="frame" x="0.0" y="0.0" width="317" height="243"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Information" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IrD-MS-b8F">
                                <rect key="frame" x="0.0" y="13" width="317" height="22"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="22" id="9ur-Gb-wL2"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                <nil key="textColor"/>
...
